@@ -136,6 +136,7 @@ module Fairy
 
     def_rpath :VF_ROOT, "Repos"
     def_prop :VF_PREFIX
+    def_prop :VF_BASE_NAME_CONVERTER
     def_prop :VF_SPLIT_SIZE
 
     def_prop :TMP_DIR
@@ -300,6 +301,7 @@ module Fairy
 #  DEFAULT_CONF.VF_ROOT = DEFAULT_CONF.HOME+"/Repos"
   DEFAULT_CONF.VF_PREFIX = `hostname`.chomp
 ## DEFAULT_CONF.VF_PREFIX is client setting.
+  DEFAULT_CONF.VF_BASE_NAME_CONVERTER = nil
   DEFAULT_CONF.VF_SPLIT_SIZE = 64*1024*1024
 
   DEFAULT_CONF.TMP_DIR = "/tmp/fairy/tmpbuf"
@@ -308,7 +310,7 @@ module Fairy
   DEFAULT_CONF.LOG_FLUSH_INTERVAL = 1
   DEFAULT_CONF.LOG_LEVEL = :DEBUG
   DEFAULT_CONF.LOG_IMPORT_NTIMES_POP = 10000
-  DEFAULT_CONF.LOG_LOCAL_OUTPUT_DEV = $stderr
+  DEFAULT_CONF.LOG_LOCAL_OUTPUT_DEV = :$stderr
 
   DEFAULT_CONF.PROCESSOR_MON_ON = false
   DEFAULT_CONF.PROCESSOR_MON_INTERVAL = 60
