@@ -114,6 +114,11 @@ CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 ##CONF.VF_PREFIX = `hostname`.chomp 
 #- CONF.VF_PREFIX use client setting.
 #  (ja_JP.utf-8: CONF.VF_PREFIXはクライアントのものが使われる)
+
+  CONF["emperor2"].VF_BASE_NAME_CONVERTER = "proc{|basename| 
+    basename.sub(%r|^/home/keiju/public/a.research/fairy/git/fairy/|, '')
+  }"
+
 ##CONF.VF_SPLIT_SIZE = 64*1024*1024
 
 ##CONF.TMP_DIR = "/tmp/fairy/tmpbuf"
@@ -124,8 +129,8 @@ CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 #CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
 CONF.LOG_IMPORT_NTIMES_POP = 100000
-##CONF.LOG_LOCAL_OUTPUT_DEV = $stderr
-#CONF.LOG_LOCAL_OUTPUT_DEV = $stdout
+##CONF.LOG_LOCAL_OUTPUT_DEV = :$stderr
+#CONF.LOG_LOCAL_OUTPUT_DEV = :$stdout
 #CONF.LOG_LOCAL_OUTPUT_DEV = nil
 
 ##  CONF.PROCESSOR_MON_ON = false
