@@ -115,7 +115,7 @@ module Fairy
       conf.base_conf = CONF
       Fairy::REPLACE_CONF(conf)
 
-      Log.LOCAL_OUTPUT_DEV = CONF.LOG_LOCAL_OUTPUT_DEV 
+#      Log::set_local_output_dev
 
       if CONF.PROCESSOR_MON_ON
 	Log::info self, "Processor Status Monitoring: ON"
